// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component expands submenu 1`] = `
<div>
  <nav
    class="Navigation-root-53"
  >
    <div
      class="Navigation-navigationList-59 Navigation-offset2-56 Navigation-show-61"
    >
      <ul>
        <li>
          <h6
            class="MuiTypography-root Navigation-mainMenuTitle-67 Typography-root-77 MuiTypography-h6"
            data-testid="typography"
          >
            BMI Group
          </h6>
        </li>
        <li>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-88"
            >
              Products
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Navigation-chevronRight-65"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="Navigation-navigationList-59"
          >
            <ul>
              <li
                class="Navigation-backNavigation-62"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronLeft-64"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                    Main menu
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-66"
                />
              </li>
              <li>
                <h6
                  class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                  data-testid="typography"
                >
                  Products by type
                </h6>
              </li>
              <li>
                <p
                  class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-body1"
                  data-testid="typography"
                >
                  This is a paragraph
                </p>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-active-75 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Roof Top Item
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronRight-65"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="Navigation-navigationList-59 Navigation-show-61"
                >
                  <ul>
                    <li
                      class="Navigation-backNavigation-62"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          <span
                            class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronLeft-64"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                              />
                            </svg>
                          </span>
                          Products by type
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <hr
                        class="Navigation-separator-66"
                      />
                    </li>
                    <li>
                      <h6
                        class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                        data-testid="typography"
                      >
                        Roof
                      </h6>
                    </li>
                    <li>
                      <img
                        alt="Some image"
                        class="Navigation-image-69"
                        src="http://some/image.png"
                      />
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          Tiles
                          <span
                            class="MuiButton-endIcon MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronRight-65"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        class="Navigation-navigationList-59"
                      >
                        <ul>
                          <li
                            class="Navigation-backNavigation-62"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-88"
                              >
                                <span
                                  class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root Navigation-chevronLeft-64"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                                    />
                                  </svg>
                                </span>
                                Roof
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <hr
                              class="Navigation-separator-66"
                            />
                          </li>
                          <li>
                            <h6
                              class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                              data-testid="typography"
                            >
                              Tiles
                            </h6>
                          </li>
                          <li>
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                              tabindex="0"
                              target="_blank"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-88"
                              >
                                Tiles overview
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </li>
                        </ul>
                      </div>
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                        tabindex="0"
                        target="_blank"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          Turf Roofs
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </li>
                  </ul>
                </div>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    View all our products
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <span
                        class="Navigation-iconWrapper-70"
                      >
                        <svg />
                      </span>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-66"
                />
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Wall
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </li>
              <li>
                <button
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  role="button"
                  tabindex="0"
                  target="_blank"
                  to="/documentation/"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Documentation
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </li>
        <li>
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
            role="button"
            tabindex="0"
            target="_blank"
            to="/clay/"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-88"
            >
              Tiles
            </span>
          </button>
        </li>
        <ul
          class="Navigation-utilities-71"
        >
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Find a stockist
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Find a roofer
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Partner portals
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
        </ul>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation component expands submenu 2`] = `
<div>
  <nav
    class="Navigation-root-53"
  >
    <div
      class="Navigation-navigationList-59 Navigation-offset0-54 Navigation-show-61"
    >
      <ul>
        <li>
          <h6
            class="MuiTypography-root Navigation-mainMenuTitle-67 Typography-root-77 MuiTypography-h6"
            data-testid="typography"
          >
            BMI Group
          </h6>
        </li>
        <li>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-88"
            >
              Products
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Navigation-chevronRight-65"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="Navigation-navigationList-59"
          >
            <ul>
              <li
                class="Navigation-backNavigation-62"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronLeft-64"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                    Main menu
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-66"
                />
              </li>
              <li>
                <h6
                  class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                  data-testid="typography"
                >
                  Products by type
                </h6>
              </li>
              <li>
                <p
                  class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-body1"
                  data-testid="typography"
                >
                  This is a paragraph
                </p>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-active-75 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Roof Top Item
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronRight-65"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="Navigation-navigationList-59 Navigation-show-61"
                >
                  <ul>
                    <li
                      class="Navigation-backNavigation-62"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          <span
                            class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronLeft-64"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                              />
                            </svg>
                          </span>
                          Products by type
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <hr
                        class="Navigation-separator-66"
                      />
                    </li>
                    <li>
                      <h6
                        class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                        data-testid="typography"
                      >
                        Roof
                      </h6>
                    </li>
                    <li>
                      <img
                        alt="Some image"
                        class="Navigation-image-69"
                        src="http://some/image.png"
                      />
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          Tiles
                          <span
                            class="MuiButton-endIcon MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronRight-65"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        class="Navigation-navigationList-59"
                      >
                        <ul>
                          <li
                            class="Navigation-backNavigation-62"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-88"
                              >
                                <span
                                  class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root Navigation-chevronLeft-64"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                                    />
                                  </svg>
                                </span>
                                Roof
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <hr
                              class="Navigation-separator-66"
                            />
                          </li>
                          <li>
                            <h6
                              class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                              data-testid="typography"
                            >
                              Tiles
                            </h6>
                          </li>
                          <li>
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                              tabindex="0"
                              target="_blank"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-88"
                              >
                                Tiles overview
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </li>
                        </ul>
                      </div>
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                        tabindex="0"
                        target="_blank"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          Turf Roofs
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </li>
                  </ul>
                </div>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    View all our products
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <span
                        class="Navigation-iconWrapper-70"
                      >
                        <svg />
                      </span>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-66"
                />
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Wall
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </li>
              <li>
                <button
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  role="button"
                  tabindex="0"
                  target="_blank"
                  to="/documentation/"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Documentation
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </li>
        <li>
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
            role="button"
            tabindex="0"
            target="_blank"
            to="/clay/"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-88"
            >
              Tiles
            </span>
          </button>
        </li>
        <ul
          class="Navigation-utilities-71"
        >
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Find a stockist
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Find a roofer
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Partner portals
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
        </ul>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation component expands submenu 3`] = `
<div>
  <nav
    class="Navigation-root-53"
  >
    <div
      class="Navigation-navigationList-59 Navigation-offset1-55 Navigation-show-61"
    >
      <ul>
        <li>
          <h6
            class="MuiTypography-root Navigation-mainMenuTitle-67 Typography-root-77 MuiTypography-h6"
            data-testid="typography"
          >
            BMI Group
          </h6>
        </li>
        <li>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-active-75 MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-88"
            >
              Products
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Navigation-chevronRight-65"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="Navigation-navigationList-59 Navigation-show-61"
          >
            <ul>
              <li
                class="Navigation-backNavigation-62"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronLeft-64"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                    Main menu
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-66"
                />
              </li>
              <li>
                <h6
                  class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                  data-testid="typography"
                >
                  Products by type
                </h6>
              </li>
              <li>
                <p
                  class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-body1"
                  data-testid="typography"
                >
                  This is a paragraph
                </p>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-active-75 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Roof Top Item
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronRight-65"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="Navigation-navigationList-59 Navigation-show-61"
                >
                  <ul>
                    <li
                      class="Navigation-backNavigation-62"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          <span
                            class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronLeft-64"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                              />
                            </svg>
                          </span>
                          Products by type
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <hr
                        class="Navigation-separator-66"
                      />
                    </li>
                    <li>
                      <h6
                        class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                        data-testid="typography"
                      >
                        Roof
                      </h6>
                    </li>
                    <li>
                      <img
                        alt="Some image"
                        class="Navigation-image-69"
                        src="http://some/image.png"
                      />
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          Tiles
                          <span
                            class="MuiButton-endIcon MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronRight-65"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        class="Navigation-navigationList-59"
                      >
                        <ul>
                          <li
                            class="Navigation-backNavigation-62"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 Navigation-backButton-63 MuiButton-textPrimary"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-88"
                              >
                                <span
                                  class="MuiButton-startIcon Button-startIcon-89 MuiButton-iconSizeMedium"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root Navigation-chevronLeft-64"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                                    />
                                  </svg>
                                </span>
                                Roof
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <hr
                              class="Navigation-separator-66"
                            />
                          </li>
                          <li>
                            <h6
                              class="MuiTypography-root Navigation-navigationListType-68 Typography-root-77 MuiTypography-h6"
                              data-testid="typography"
                            >
                              Tiles
                            </h6>
                          </li>
                          <li>
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                              tabindex="0"
                              target="_blank"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-88"
                              >
                                Tiles overview
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </li>
                        </ul>
                      </div>
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                        tabindex="0"
                        target="_blank"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-88"
                        >
                          Turf Roofs
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </li>
                  </ul>
                </div>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    View all our products
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <span
                        class="Navigation-iconWrapper-70"
                      >
                        <svg />
                      </span>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-66"
                />
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Wall
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </li>
              <li>
                <button
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
                  role="button"
                  tabindex="0"
                  target="_blank"
                  to="/documentation/"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-88"
                  >
                    Documentation
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </li>
        <li>
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
            role="button"
            tabindex="0"
            target="_blank"
            to="/clay/"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-88"
            >
              Tiles
            </span>
          </button>
        </li>
        <ul
          class="Navigation-utilities-71"
        >
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Find a stockist
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Find a roofer
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-85 MuiButton-text Button-text-86 Navigation-navigationListButton-74 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-88"
              >
                Partner portals
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
        </ul>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation component renders correctly 1`] = `
<div>
  <nav
    class="Navigation-root-1"
  >
    <div
      class="Navigation-navigationList-7 Navigation-offset0-2 Navigation-show-9"
    >
      <ul>
        <li>
          <h6
            class="MuiTypography-root Navigation-mainMenuTitle-15 Typography-root-25 MuiTypography-h6"
            data-testid="typography"
          >
            BMI Group
          </h6>
        </li>
        <li>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-36"
            >
              Products
              <span
                class="MuiButton-endIcon MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Navigation-chevronRight-13"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="Navigation-navigationList-7"
          >
            <ul>
              <li
                class="Navigation-backNavigation-10"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 Navigation-backButton-11 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-36"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon-37 MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronLeft-12"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </span>
                    Main menu
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-14"
                />
              </li>
              <li>
                <h6
                  class="MuiTypography-root Navigation-navigationListType-16 Typography-root-25 MuiTypography-h6"
                  data-testid="typography"
                >
                  Products by type
                </h6>
              </li>
              <li>
                <p
                  class="MuiTypography-root Navigation-navigationListType-16 Typography-root-25 MuiTypography-body1"
                  data-testid="typography"
                >
                  This is a paragraph
                </p>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-36"
                  >
                    Roof Top Item
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Navigation-chevronRight-13"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="Navigation-navigationList-7"
                >
                  <ul>
                    <li
                      class="Navigation-backNavigation-10"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 Navigation-backButton-11 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-36"
                        >
                          <span
                            class="MuiButton-startIcon Button-startIcon-37 MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronLeft-12"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                              />
                            </svg>
                          </span>
                          Products by type
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <hr
                        class="Navigation-separator-14"
                      />
                    </li>
                    <li>
                      <h6
                        class="MuiTypography-root Navigation-navigationListType-16 Typography-root-25 MuiTypography-h6"
                        data-testid="typography"
                      >
                        Roof
                      </h6>
                    </li>
                    <li>
                      <img
                        alt="Some image"
                        class="Navigation-image-17"
                        src="http://some/image.png"
                      />
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-36"
                        >
                          Tiles
                          <span
                            class="MuiButton-endIcon MuiButton-iconSizeMedium"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root Navigation-chevronRight-13"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <div
                        class="Navigation-navigationList-7"
                      >
                        <ul>
                          <li
                            class="Navigation-backNavigation-10"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 Navigation-backButton-11 MuiButton-textPrimary"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-36"
                              >
                                <span
                                  class="MuiButton-startIcon Button-startIcon-37 MuiButton-iconSizeMedium"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root Navigation-chevronLeft-12"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                                    />
                                  </svg>
                                </span>
                                Roof
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <hr
                              class="Navigation-separator-14"
                            />
                          </li>
                          <li>
                            <h6
                              class="MuiTypography-root Navigation-navigationListType-16 Typography-root-25 MuiTypography-h6"
                              data-testid="typography"
                            >
                              Tiles
                            </h6>
                          </li>
                          <li>
                            <button
                              class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                              tabindex="0"
                              target="_blank"
                              type="button"
                            >
                              <span
                                class="MuiButton-label Button-label-36"
                              >
                                Tiles overview
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </li>
                        </ul>
                      </div>
                    </li>
                    <li>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                        tabindex="0"
                        target="_blank"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-36"
                        >
                          Turf Roofs
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </li>
                  </ul>
                </div>
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-36"
                  >
                    View all our products
                    <span
                      class="MuiButton-endIcon MuiButton-iconSizeMedium"
                    >
                      <span
                        class="Navigation-iconWrapper-18"
                      >
                        <svg />
                      </span>
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <hr
                  class="Navigation-separator-14"
                />
              </li>
              <li>
                <button
                  class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                  tabindex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-36"
                  >
                    Wall
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </li>
              <li>
                <button
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
                  role="button"
                  tabindex="0"
                  target="_blank"
                  to="/documentation/"
                  type="button"
                >
                  <span
                    class="MuiButton-label Button-label-36"
                  >
                    Documentation
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </li>
            </ul>
          </div>
        </li>
        <li>
          <button
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
            role="button"
            tabindex="0"
            target="_blank"
            to="/clay/"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-36"
            >
              Tiles
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <ul
          class="Navigation-utilities-19"
        >
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-36"
              >
                Find a stockist
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-36"
              >
                Find a roofer
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root Button-root-33 MuiButton-text Button-text-34 Navigation-navigationListButton-22 MuiButton-textPrimary"
              href="#"
              tabindex="0"
            >
              <span
                class="MuiButton-label Button-label-36"
              >
                Partner portals
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </li>
        </ul>
      </ul>
    </div>
  </nav>
</div>
`;
